# incerr

./: CMakeLists.txt  README.md
include/: incerr.hpp
src/: incerr.cpp
src/private_inc/private/: incerr_impl.hpp
